# sessions

./: .gitignore  Cargo.toml  Justfile  README.md  package.json  vercel.json
.github/workflows/: ci.yml  release.yml
api/: install.js  test.js  uninstall.js
public/: index.html
scripts/: install-local.sh  install.sh  test.sh  uninstall.sh
src/: lib.rs  main.rs  session_start.rs  session_stop.rs
