[package]
name = "session-count"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Bigger <andreas@abigger.io>"]
description = "Session counter hook for Claude Code"
license = "MIT"
repository = "https://github.com/andreasbigger/session-count"

[[bin]]
name = "session-start"
path = "src/session_start.rs"

[[bin]]
name = "session-stop"
path = "src/session_stop.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
tempfile = "3.8"